--- a/EXERCISE REMOTE DATABASES/STUDENTS/index.html
+++ b/EXERCISE REMOTE DATABASES/STUDENTS/index.html
@@ -20,6 +20,21 @@
         </thead>
         <tbody></tbody>
     </table>
+    <div id="error-notification"></div>
+    <form id="create-form">
+        <h3>FORM</h3>
+        <div id="counter-id"></div>
+        <label>First Name</label>
+        <input type="title" name="firstName" placeholder="First Name..." id="firstName">
+        <label>Last Name</label>
+        <input type="title" name="lastName" placeholder="Last Name..." id="lastName">
+        <label>Faculty Number</label>
+        <input type="number" name="facultyNumber" placeholder="Faculty Number..." id="facultyNumber">
+        <label>Grade</label>
+        <input type="number" name="grade" placeholder="Grade..." id="grade">
+        <button>Submit</button>
+    </form>
+
     <script src="./app.js"></script>
 </body>
 
